2007-01-22  Till Kamppeter <till.kamppeter@gmail.com>

	* README, driver/capt.xml, driver/chp2200.xml, driver/drv_z42.xml,
	  driver/gdi.xml, driver/hl7x0.xml, driver/lbp660.xml,
	  driver/lm1100.xml, driver/Postscript.xml, driver/pxljr.xml,
	  driver/rastertokmXXXXdl.xml, driver/splix.xml,
	  printer/Apple-LaserWriter_4_600.xml,
	  printer/HP-LaserJet_1010.xml, printer/HP-LaserJet_1012.xml,
	  printer/HP-LaserJet_1200.xml, printer/HP-LaserJet_3100.xml,
	  printer/HP-LaserJet_3150.xml: Replaced "FSG OpenPrinting" by
	  "OpenPrinting".

	* printer/Gestetner-10512.xml, printer/Gestetner-2212.xml,
	  printer/Gestetner-2712.xml, printer/Gestetner-3212.xml,
	  printer/Gestetner-3502.xml, printer/Gestetner-3532_4235g.xml,
	  printer/Gestetner-4502.xml, printer/Gestetner-4532_4245g.xml,
	  printer/Gestetner-6002.xml, printer/Gestetner-7502.xml,
	  printer/Gestetner-9002.xml, printer/Gestetner-C7010.xml,
	  printer/Gestetner-C7116.xml, printer/Gestetner-C7416.xml,
	  printer/Gestetner-C7417.xml, printer/Gestetner-C7425dn.xml,
	  printer/Gestetner-C7435n.xml, printer/Gestetner-C7521n.xml,
	  printer/Gestetner-C7526dn.xml, printer/Gestetner-C7528n.xml,
	  printer/Gestetner-C7531dn.xml, printer/Gestetner-C7535n.xml,
	  printer/Gestetner-CS555.xml, printer/Gestetner-DSc224.xml,
	  printer/Gestetner-DSc232.xml, printer/Gestetner-DSc328.xml,
	  printer/Gestetner-DSc332.xml, printer/Gestetner-DSc338.xml,
	  printer/Gestetner-DSc38u.xml, printer/Gestetner-DSc38.xml,
	  printer/Gestetner-DSc424.xml, printer/Gestetner-DSc428.xml,
	  printer/Gestetner-DSc432.xml, printer/Gestetner-DSc435.xml,
	  printer/Gestetner-DSc445.xml, printer/Gestetner-DSc460.xml,
	  printer/Gestetner-DSc524.xml, printer/Gestetner-DSc532.xml,
	  printer/Gestetner-DSm415.xml, printer/Gestetner-DSm615.xml,
	  printer/Gestetner-DSm616.xml, printer/Gestetner-DSm618d.xml,
	  printer/Gestetner-DSm618.xml, printer/Gestetner-DSm620d.xml,
	  printer/Gestetner-DSm620.xml, printer/Gestetner-DSm622.xml,