@@ -45,17 +45,34 @@
   <!--no "contrib_url"-->
   <comments>
     <en>
-    For basic printing functionality use the Postscript PPD. For advanced functionality such
-    as printer status and maintenance features, use the
-    &lt;a href=&quot;http://hplip.sf.net/&quot;&gt;
-    HPLIP driver&lt;/a&gt; (which includes HPIJS). &lt;p&gt;
 
-    PostScript level 2, PCL 5e, and PCL 6 out of the box, parallel and
-    USB connection, 1300n with ethernet connection, 250-sheet tray
-    built-in, extra 250-sheet tray available.&lt;p&gt;
+    PCL 5e and 6 with Postscript 2 emulation, out of the box, parallel
+    and USB connection, 250-sheet tray built-in, extra 250-sheet tray
+    available.&lt;p&gt;
 
     Inductive "Instant On" fuser for very fast pre-heating, first page
     after around 8 seconds.&lt;p&gt;
+
+    For basic printing functionality use the Postscript PPD or one of
+    the PCL drivers. For advanced functionality such as printer status
+    and maintenance features, use the &lt;a
+    href=&quot;http://hplip.sf.net/&quot;&gt; HPLIP driver&lt;/a&gt;
+    (which includes HPIJS).&lt;p&gt;
+
+    The PostScript mode is very fast for pure text, and very slow on
+    images unless your printer has been upgraded with extra memory.
+    It allows the maximum resolution of 1200x1200 DPI to be used,
+    which makes it the best driver for workloads that require high
+    image quality.&lt;p&gt;
+
+    HPIJS is very fast for text and image printing, but it is limited
+    to 600x600 DPI resolution, which is not the device's maximum
+    capability.  It is the recommended driver for this printer as it
+    has the best performance across all workloads.&lt;p&gt;
+
+    Please try also "pxlmono". Probably it is also faster than
+    PostScript when only the default amount of memory is
+    available.&lt;p&gt;
 
     </en>
   </comments>
