@@ -1,3 +1,10 @@
+2007-01-24  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/HP-LaserJet_1300.xml, printer/HP-LaserJet_1320.xml:
+	  Changed recommended driver from "Postscript" to "hpijs", as the
+	  printer has not enough memory for PostScript printing by
+	  default. Updated text.
+
 2007-01-22  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* README, driver/capt.xml, driver/chp2200.xml, driver/drv_z42.xml,
